# icarus-yellow

./: .gitignore  LICENSE  Poster.pptx  README.md
apps/base/: CMakeLists.txt  make.sh  prj.conf
apps/base/src/: main.c
apps/mobile/: CMakeLists.txt  make.sh  prj.conf  speaker.overlay
apps/mobile/src/: main.c
apps/pc/: dashboard.py  knnAlg.py  main.py  processor.py
apps/pc/pythonProcessing/: dashboard.py  knnAlg.py  main.py
data/: knn_dataset.csv  sitting_2_processing_example.ods
data/raw_training_dataset/: jogging.csv  jogging_2.csv  rolling.csv  rolling_2.csv  rolling_3.csv  sitting.csv  sitting_2.csv  sitting_3.csv  standing.csv  standing_2.csv  standing_3.csv  stationary.csv  stationary_2.csv  stationary_3.csv  walking.csv  walking_2.csv
extlib/mpu9250/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
oslib/base/ble/: ble.conf  tsk_ble.c  tsk_ble.h
oslib/base/hci/: lib_hci.c  lib_hci.h
oslib/base/shell/: ahu_ble_all_cmd.c  ahu_ble_buzzer_cmd.c  ahu_ble_ccs811_cmd.c  ahu_ble_dc_cmd.c  ahu_ble_hts221_cmd.c  ahu_ble_lis2dh_cmd.c  ahu_ble_lps22_cmd.c  ahu_ble_pushbutton_cmd.c  ahu_ble_rgb_cmd.c  ahu_ble_sample_cmd.c  ahu_led_cmd.c  ahu_time_cmd.c  lib_shell.c  lib_shell.h  shell.conf
oslib/led/: lib_led.c  lib_led.h  tsk_led.c  tsk_led.h
oslib/mobile/ble/: scu_ble.c  scu_ble.h
oslib/mobile/io/: button.c  button.h  buzzer.c  buzzer.h  led.c  led.h
oslib/mobile/sensors/: air_quality_sensor.c  air_quality_sensor.h  lib_mpu9250.c  lib_mpu9250.h  motion_sensor.c  motion_sensor.h  mpu9250.overlay  temp_humidity_sensor.c  temp_humidity_sensor.h  temp_pressure_sensor.c  temp_pressure_sensor.h  tsk_mpu9250.c  tsk_mpu9250.h  ultra.c  ultra.h
oslib/usb/: usb.conf
scripts/: serial_logger.py
